# IntelliFlow

./: .env.example  README.md  docker-compose.yml  init.sql  pyproject.toml
src/: app.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/agents/: graph.py  nodes.py
src/config/: settings.py
src/database/: connection.py  models.py  vector_store.py
src/tools/: document_processor.py  weather.py
src/utils/: chat_history.py  decorators.py  ui_components.py
test/: debug_graph.py  intelliflow_agent_v1.py  requirements_test.txt  test_graph.py
test_outputs/: intelliflow_test_report.json
